Closed Bug 1165895 Opened 10 years ago Closed 10 years ago

Low integrity sandbox causes some crash reporting tests to fail on Windows.

Categories

(Core :: Security: Process Sandboxing, defect)

All
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: bobowen, Assigned: bobowen)

References

Details

Attachments

(1 file)

From this try push we can see that a low integrity NPAPI sandbox causes some crash reporting test failures (at least on 64-bit). https://treeherder.mozilla.org/#/jobs?repo=try&revision=a22533ddf6c7 Failures: 3124 INFO TEST-UNEXPECTED-FAIL | dom/plugins/test/mochitest/test_CrashService_crash.html | Test timed out. - expected PASS 3127 INFO TEST-UNEXPECTED-ERROR | dom/plugins/test/mochitest/test_CrashService_crash.html | This test did not leave any crash dumps behind, but we were expecting some! 3129 INFO TEST-UNEXPECTED-FAIL | dom/plugins/test/mochitest/test_CrashService_crash.html | undefined assertion name - Result logged after SimpleTest.finish() 3788 INFO TEST-UNEXPECTED-FAIL | dom/plugins/test/mochitest/test_CrashService_hang.html | Test timed out. - expected PASS 3791 INFO TEST-UNEXPECTED-ERROR | dom/plugins/test/mochitest/test_CrashService_hang.html | This test did not leave any crash dumps behind, but we were expecting some! 3793 INFO TEST-UNEXPECTED-FAIL | dom/plugins/test/mochitest/test_CrashService_hang.html | undefined assertion name - Result logged after SimpleTest.finish() 3809 INFO TEST-UNEXPECTED-FAIL | dom/plugins/test/mochitest/test_bug1092842.html | height of clip region rect - got 100, expected 26 3852 INFO TEST-UNEXPECTED-ERROR | dom/plugins/test/mochitest/test_crashing.html | This test did not leave any crash dumps behind, but we were expecting some! 3854 INFO TEST-UNEXPECTED-FAIL | dom/plugins/test/mochitest/test_crashing.html | undefined assertion name - Result logged after SimpleTest.finish() 3871 INFO TEST-UNEXPECTED-ERROR | dom/plugins/test/mochitest/test_hanging.html | This test did not leave any crash dumps behind, but we were expecting some! 3873 INFO TEST-UNEXPECTED-FAIL | dom/plugins/test/mochitest/test_hanging.html | undefined assertion name - Result logged after SimpleTest.finish()
Assignee: nobody → bobowen.code
This was mainly just that I'd forgotten that we'd need a rule for the crash server pipe. Also, some of the tests need to write to Temp, because they write to the temporary test profile. I've file bug 1171393 to follow-up on this. Try push with the crash server pipe rule: https://treeherder.mozilla.org/#/jobs?repo=try&revision=f22a24139d44 and another with the Temp write access for x64: https://treeherder.mozilla.org/#/jobs?repo=try&revision=7d60985a2ea3
Attachment #8615260 - Flags: review?(netzen)
Attachment #8615260 - Flags: review?(netzen) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Blocks: 1185532
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: